# verilock-offline

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
scripts/: audit-no-upload.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: fetch-json.toml
src-tauri/src/: hub_login_bridge.rs  lib.rs  main.rs
src/components/: CertificatePanel.tsx  CheckPanel.tsx  DocumentViewer.tsx  FilePicker.tsx  FingerprintPanel.tsx  NimiqHexagonIcon.tsx  OnlineLookupPanel.tsx  SessionFileBar.tsx  SettingsPanel.tsx  TrustPanel.tsx  VerifyTxPanel.tsx  WalletHeader.tsx
src/lib/: DocumentSessionContext.tsx  WalletContext.tsx  attestation.test.ts  attestation.ts  certificate.test.ts  certificate.ts  config.ts  documentSession.ts  hash.test.ts  hash.ts  nimiqRpc.test.ts  nimiqRpc.ts  onlineDocument.test.ts  onlineDocument.ts  onlineLookup.test.ts  onlineLookup.ts  tauriHttp.ts  verificationProof.test.ts  verificationProof.ts  walletAuth.ts
src/lib/pdf/: annotations.ts  overlayPaint.ts  pdfRender.ts  printPages.ts
