[package]
name = "verilock-offline"
version = "0.1.2"
description = "VeriLock Offline — local document fingerprint and seal verifier"
authors = ["Clevertech OS"]
license = "MIT"
repository = "https://github.com/clevertech-os/verilock-offline"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "verilock_offline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
